--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LQNHR5N1F9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LQNHR5N1F9');
+</script>
     <style>
         :root {
             --bg: #f0fdf4;
@@ -11180,5 +11190,6 @@
         }
     </script>
 </body>
+
 
 </html>
